# pricer

./: .gitignore  AGENT.md  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  package-lock.json  render.yaml  requirements.txt  vercel.json
.agent/: INSTALLED_SKILLS.md
Projects/pricer/: .pre-commit-config.yaml  README.md  render.yaml  requirements.txt
Projects/pricer/.github/workflows/: api-test.yml  ci.yml
Projects/pricer/api/: Dockerfile  main.py
Projects/pricer/backend/: pyproject.toml
Projects/pricer/backend/examples/: autocall_worstof_continuous_ki.json
Projects/pricer/backend/tests/: conftest.py
Projects/pricer/ui/: README.md
api/: README.md  main.py  pyproject.toml
backend/: pyproject.toml
backend/examples/: autocall_worstof_continuous_ki.json  autocallable_wof.json  price_autocallable.py  run_price.py  run_risk.py
backend/src/pricer/: __init__.py
backend/src/pricer/core/: __init__.py  calendar.py  schedule.py
backend/src/pricer/engines/: __init__.py  base.py  grid.py  monte_carlo.py  path_generator.py  tree_pricer.py
backend/src/pricer/market/: __init__.py  dividends.py  market_data.py  rates.py  volatility.py
backend/src/pricer/pricers/: __init__.py  autocallable_pricer.py  event_engine.py
backend/src/pricer/products/: __init__.py  base.py  schema.py
backend/src/pricer/reporting/: __init__.py  cashflow_report.py
backend/src/pricer/risk/: __init__.py  greeks.py  report.py
backend/tests/: conftest.py  test_autocallable_regression.py  test_brownian_bridge.py  test_day_count.py  test_event_engine_extended.py  test_greeks.py  test_schema.py
docs/: README.md
docs/architecture/: overview.md
docs/development/: setup.md
docs/plans/: 2026-01-23-project-refactoring.md
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/api/: client.ts
ui/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
ui/src/app/risk/: page.tsx
ui/src/components/: AppNav.tsx  ui.tsx
ui/src/components/ui/: card.tsx  (+3 more)
(+21 files in other folders)
